# experimental

./: .gitignore  .gitmodules  go.mod  go.sum
.gitignore/: .gitignore
clojure/: quadraticequation.clj
cpp/: emplace.cc
cpp/pybinddemo/: CMakeLists.txt  README.md  main.cpp
golang/: go.mod  go.sum
golang/calculator/: calculator_server.go
golang/calculatorpb/: calculator_service.pb.go  calculator_service.twirp.go
golang/calculus/: integral.go  integral_test.go
golang/console/: console.go
golang/csutil/: deque.go  tree.go
golang/daemon/: main.go
golang/game2048/: Dockerfile  Makefile  compose.yaml
golang/helloworld/: Dockerfile  Makefile  helloworld.go
golang/lissajous/: lissajous.go
golang/memprof/: memprof.go  memprof_test.go
golang/tetris/: board.go  board_test.go  game.go  tetris.go  tetromino.go  tetromino_test.go
golang/utf8demo/: utf8demo.go
golang/wordscounter/: wordscounter.go
java/gameoflife/: settings.gradle
java/micrograd/: README.md  settings.gradle
kotlin/coroutines/: build.gradle
ml/carprice/: carprice.ipynb  carprice_tf.ipynb
ml/gd/: gd.go  gd.ipynb
ml/linreg/: oil.ipynb
ml/mab/: bernoulli_thompson_sampling.ipynb  mab.ipynb
ml/micrograd/: micrograd.ipynb
ml/mit-intro-to-deeplearning/: lecture_1.ipynb  lecture_2.ipynb
ml/tensorflow/: california_housing.ipynb
proto/calculator/: calculator_service.pb.go  calculator_service.proto  calculator_service.twirp.go
python/frameevaldemo/: demo.py
python/pytestdemo/: pytest_demo.py  test_pytest_demo.py
statistics/: distributions.ipynb
statistics/ple/: README.md  (+1 more)
(+61 files in other folders)
